2006-02-07  Rodney Dawes  <dobey@novell.com>

	* icon-name-mapping.pl.in (tls_map_icons): Don't use an elsif for the
	linking of .icon files, as they need to always be checked for

	* legacy-icon-mapping.xml: Add a link for the volume-knob icon used
	by the GNOME mixer applet to multimedia-volume-control

	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=5834

2006-02-03  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.6.7 for release

2006-02-03  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add gtk-file as link to text-x-preview
	Add process-idle for backward compat with gnome-spinner-rest

2006-02-03  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add mappings for media-jaz and media-zip
	and link the related gnome-dev-* icons to them

	Fixes http://bugzilla.gnome.org/show_bug.cgi?id=328606 and
	https://bugs.freedesktop.org/show_bug.cgi?id=5794

2006-02-03  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mappping.xml: Add a link for the application/xhtml+xml
	mime type to be handled properly in GNOME and use the text-html icon
	Add a mapping for text-x-preview and move gnome-fs-regular to it

2006-01-24  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Link stock_mail-forward to the new
	mail-forward icon

2006-01-22  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.6.6.1 for release

2006-01-22  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add animations context and link the
	process-working icon to gnome-spinner for compatibility

2006-01-20  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Fix typo in weather-few-clouds-night
	
2006-01-20  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.6.6 for release
	
2006-01-20  Rodney Dawes  <dobey@novell.com>

	* README: Add some text and a link to the Icon Naming Spec

2006-01-20  Rodney Dawes  <dobey@novell.com>

	* Makefile.am: Don't do the .pc file generation here